--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Привет</h1>
     <p>Test text</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, ut quos autem vitae esse iure porro iusto aspernatur. Corporis alias exercitationem voluptatum at ab. Hic totam temporibus nostrum quaerat dolor?</p>
 </body>
 </html>
